	(ipmi_rmcpplus_check_packet_session_authentication_code)
	(ipmi_rmcpplus_check_rakp_2_key_exchange_authentication_code)
	(ipmi_calculate_rakp_3_key_exchange_authentication_code)
	(ipmi_rmcpplus_check_rakp_4_integrity_check_value): Fix secure
	memset of invalid/unnecessary buffers.

	* libfreeipmi/interface/ipmi-lan-interface.c (assemble_ipmi_lan_pkt):
	Fix secure memset of unnecessary buffers.
	
2016-09-29 Albert Chu <chu11@llnl.gov>

	* libipmiconsole/ipmiconsole_ctx.c (ipmiconsole_ctx_fds_cleanup):
	Fix error in cleanup that could lead to fd leak.

2016-07-27 Albert Chu <chu11@llnl.gov>

	* common/toolcommon/tool-common.h,
	common/toolcommon/tool-common.c (ipmi_open): Add flags option.

	* Use new ipmi_open() function call appropriately in all tools.

	* ipmi-raw/: Support new --no-session option.

	* libfreeipmi/api/ipmi-api.c (ipmi_cmd_raw): Fix corner case
	when using IPMI_FLAGS_NOSESSION.

2016-09-26 Albert Chu <chu11@llnl.gov>

	* ipmipower/ipmipower_powercmd.c (ipmipower_powercmd_queue): Fix
	initialization of variables in wrong branch.

2016-09-26 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/util/ipmi-util.c (ipmi_get_random): Remove call to
	gcry_randomize.  There's no guarantee gcrypt was initialized.

	* libfreeipmi/libcommon/ipmi-crypt.h,
	libfreeipmi/libcommon/ipmi-crypt.c (crypt_get_random): New
	function that uses gcry_randomize.

	* libfreeipmi/interface/ipmi-rmcpplus-interface.c (_construct_payload_confidentiality_aes_cbc_128):
	Use crypt_get_random appropriately.

	* libfreeipmi/include/freeipmi/interface/ipmi-rmcpplus-interface.h,
	libfreeipmi/interface/ipmi-rmcpplus-interface.c (ipmi_rmcpplus_get_random):
	Add new convenience function.

	* libfreeipmi/api/ipmi-lan-session-common.c (api_lan_2_0_open_session),
	libipmiconsole/ipmiconsole_ctx.c (ipmiconsole_ctx_session_setup),
	ipmipower/ipmipower_powercmd.c (ipmipower_powercmd_queue): Use new
	ipmi_rmcpplus_get_random appropriately.
	
2016-09-22 Albert Chu <chu11@llnl.gov>
